# BleMeshProvisioner

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROVISIONING_FLOW.md  PROV_ADDRESS_ALLOCATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
SDK_DOC/: RL62M02_Provisioner_ATCMD.md  Richlink_Mesh_Device_產品通訊格式.md
ble_mesh_provisioner/: __init__.py
ble_mesh_provisioner/cli/: __init__.py  main.py  ui_helpers.py
ble_mesh_provisioner/core/: __init__.py  async_at_command.py  async_serial_interface.py  response_parser.py
ble_mesh_provisioner/devices/: __init__.py
ble_mesh_provisioner/network/: __init__.py  async_message_listener.py  async_provisioner_manager.py
ble_mesh_provisioner/utils/: __init__.py  logger.py  state_store.py
docs/: ASYNCIO_MIGRATION_COMPLETE.md  ASYNCIO_REFACTOR_REPORT.md  AT_COMMAND_FIX_COMPLETE.md  AT_COMMAND_FIX_REPORT.md  AT_COMMAND_REVIEW.md  AT_NL_TEST_REPORT.md  DEVELOPMENT_STATUS.md  HARDWARE_TEST_REPORT.md  MeshProvisioner_mamager.md  PROVISIONER_CLI_DESIGN.md  README.md  TEST_FIX_REPORT.md
examples/: async_basic_usage.py  async_complete_example.py  basic_usage.py
tests/: README.md  __init__.py  conftest.py  hardware_interactions.json
tests/integration/: __init__.py  test_basic_commands.py  test_hardware.py  test_node_list.py  test_provisioning_flow.py  test_publish.py  test_subscription.py
tests/unit/: __init__.py  test_async_at_command.py  test_async_simple.py  test_command_validation.py
tests/unit/mocks/: __init__.py  async_mock_serial.py  mock_responses.py  mock_serial.py
